--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+*{
+  font-family: 'Poppins', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper{
+  background: #212429;
+  color: #ffff;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+}
+.sidebar{
+  width: 300px;
+  margin: 0.5rem;
+  background: #212429;
+  box-shadow: 5px 5px 10px #171a1d,
+    -5px -5px 10px #2b2e35;
+    border-radius: 20px;
+  
+}
+.description-container{
+  width: calc(100vw - 300px);
+  margin: 0.5rem;
+  overflow-y: scroll;
+}
+.details{
+  margin-bottom: 0.5rem;
+  background: #212429;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 600px){
+  .wrapper{
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  .sidebar{
+    width: auto;
+  }
+  .description-container{
+    width: auto;
+  }
+  .details{
+    width: auto;
+  }
+  .forecast{
+    width: auto;
   }
 }
