--- a/src/components/style.css
+++ b/src/components/style.css
@@ -29,9 +29,10 @@
     color: #ffff;
 }
 
-::placeholder{
+::placeholder {
     color: #ffff;
 }
+
 .search-button {
     background-color: #007bff;
     border: none;
@@ -51,7 +52,6 @@
     width: 100%;
     height: 500px;
     display: flex;
-    /* flex-direction: column; */
     justify-content: center;
 }
 
@@ -65,26 +65,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background: #212429;
-    box-shadow: 5px 5px 10px #171a1d,
-        -5px -5px 10px #2b2e35; */
 }
 
-.weather-icon  img{
-    width: 100px; 
+.weather-icon img {
+    width: 100px;
     height: 100px;
 }
 
 .weather-details {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
     margin-left: 20px;
 }
 
 .weather-details h1 {
-    /* font-size: 26px; */
     font-weight: 600;
     margin: 0;
 }
@@ -98,16 +93,13 @@
     width: 100%;
     border: none;
     border-top: 0.5px solid rgba(255, 255, 255, 0.3);
-    /* Very light white color */
     margin: 20px 0;
-    /* Adjust as needed */
 }
 
 /* DETAILS */
 
-.details-container{
+.details-container {
     height: 100%;
-    /* margin: 1rem; */
     margin-top: 1rem;
     margin-bottom: 1rem;
     margin-right: 4rem;
@@ -118,10 +110,9 @@
     justify-content: space-between;
 }
 
-.temp-card{
+.temp-card {
     width: 300px;
     height: 160px;
-    /* border: 1px solid white; */
     margin-bottom: 1rem;
     border-radius: 10px;
     padding: 5px;
@@ -129,17 +120,19 @@
     box-shadow: 5px 5px 10px #171a1d,
         -5px -5px 10px #2b2e35;
 }
-.temp-card h4{
+
+.temp-card h4 {
     margin-left: 1rem;
 }
-.temp-detail{
+
+.temp-detail {
     width: 100%;
-    /* height: 100%; */
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.weather-detail{
+
+.weather-detail {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -147,7 +140,7 @@
     justify-content: center;
 }
 
-.weather-detail{
+.weather-detail {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -155,23 +148,25 @@
     justify-content: center;
 }
 
-.weather-detail img{
+.weather-detail img {
     width: 100px;
     height: 100px;
 }
 
 /* FORECAST SECTION */
 
-.forecast-container{
+.forecast-container {
     display: flex;
     flex-direction: column;
     margin-left: 1rem;
 }
-.forecast-wrapper{
+
+.forecast-wrapper {
     display: flex;
     margin-bottom: 20px;
 }
-.forecast-card{
+
+.forecast-card {
     width: 200px;
     margin-right: 25px;
     margin-bottom: 15px;
@@ -184,48 +179,59 @@
     box-shadow: 5px 5px 10px #171a1d,
         -5px -5px 10px #2b2e35;
 }
-.forecast-icon img{
+
+.forecast-icon img {
     width: 100px;
     height: 100px;
 }
-.forecast-details{
+
+.forecast-details {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-@media screen and (max-width: 1070px){
-    .forecast-wrapper {
-        flex-wrap: wrap; /* Display forecast cards in a single column */
-      }
+.city-not-found{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: #171a1d;
+    color: #ffff;
 }
 
-  @media screen and (max-width:600px){
+@media screen and (max-width: 1070px) {
+    .forecast-wrapper {
+        flex-wrap: wrap;
+    }
+    .details-container{
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width:600px) {
     .details-container {
         justify-content: center;
         align-items: center;
-      }
-  }
-  
-  @media screen and (max-width: 768px) {
+    }
+}
+
+@media screen and (max-width: 768px) {
     .search-bar {
-      width: 100%; /* Adjust the search bar width for smaller screens */
+        width: 100%;
     }
-  
+
     .weather-card {
-      width: 100%; /* Adjust the weather card width for smaller screens */
+        width: 100%;
     }
-  
+
     .forecast-wrapper {
-      flex-direction: column; /* Display forecast cards in a single column */
+        flex-direction: column;
     }
-  
+
     .forecast-card {
-      width: 100%;
-      margin: 0.5rem 0;
+        width: 100%;
+        margin: 0.5rem 0;
     }
-  }
-  
-  
-  /* Add more media queries as needed for further screen sizes */
-  
+}
